Bug 112842 - UI Leading zeros label not disactivated when Number format is Boolean
Summary: UI Leading zeros label not disactivated when Number format is Boolean
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.1.2 release
Hardware: All All
: medium trivial
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-02 18:13 UTC by Emil Tanev
Modified: 2017-10-03 21:00 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (115.43 KB, image/png)
2017-10-02 18:13 UTC, Emil Tanev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Emil Tanev 2017-10-02 18:13:44 UTC
Created attachment 136706 [details]
screenshot

Open Calc
Change Number format to Boolean in the property panel
Issue: Leading zeros label is not disactivated ( decimal places is)
screenshot
Comment 1 Xisco Faulí 2017-10-02 22:40:34 UTC
Patch in gerrit: https://gerrit.libreoffice.org/#/c/43058/
Comment 2 Commit Notification 2017-10-03 20:39:35 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=13a27860ae79ee8ac9c96b8beb6d3d7aa56a9d94

tdf#112842: UI enable/disable leadingzeroeslabel

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.