tdf#112842: UI enable/disable leadingzeroeslabel

Change-Id: I73c617c1416628d094b8ee5794f43e16b77681d3
Reviewed-on: https://gerrit.libreoffice.org/43058
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>